Bug 54842 - Conditional formatting lost when delete any row or column
Summary: Conditional formatting lost when delete any row or column
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 (target:3.6.2.2)
Keywords:
: 55584 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-13 07:45 UTC by Fabio
Modified: 2012-10-07 05:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
a simply exanple (7.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-09-13 08:58 UTC, Fabio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fabio 2012-09-13 07:45:27 UTC
conditional formatting of a cell is lost when I delete a row or column.
For example, if imposed conditional formatting in cell A1 (if A1 = D font color red) and delete row A1000000 the condition is lost and is not restored even if I cancel the last action
Comment 1 Fabio 2012-09-13 08:58:29 UTC
Created attachment 67083 [details]
a simply exanple
Comment 2 Markus Mohrhard 2012-09-14 17:00:43 UTC
Already know the problem. Will be fixed soon. We just need to find the root cause of another problem that does not happen if we fix this bug, but that is not related to the fix.

Will be in 3.6.2.2.
Comment 3 Not Assigned 2012-09-17 18:54:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=764e7e71038d5ae66061f44bc0cd51ce33ae96ed

hopefully a corect way to deal with deleting rows and cols, fdo#54842



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Markus Mohrhard 2012-09-29 17:39:23 UTC
The commits to the other branches hs not been annouced because it was merged into a larger patch.
Comment 5 Rainer Bielefeld Retired 2012-10-07 05:23:55 UTC
Added Target info due to Comment 2
Comment 6 Rainer Bielefeld Retired 2012-10-07 05:36:59 UTC
*** Bug 55584 has been marked as a duplicate of this bug. ***