hopefully a corect way to deal with deleting rows and cols, fdo#54842

Change-Id: I4ec1a8225ae3c84352643876065fb4cc7073b9f4